--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,21 +1,22 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 @font-face {
-  font-family: 'AmazonEmber';
-  src: url('./assets/fonts/amazon-type-fonts/AmazonEmber_W_Rg.woff2') format('woff2'),
-       url('./assets/fonts/amazon-type-fonts/AmazonEmber_W_Rg.woff') format('woff');
+  font-family: "AmazonEmber";
+  src: url("./assets/fonts/amazon-type-fonts/AmazonEmber_W_Rg.woff2")
+      format("woff2"),
+    url("./assets/fonts/amazon-type-fonts/AmazonEmber_W_Rg.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
